chore: restructure project into css/, js/, images/ folders and update paths

--- a/responsive_image_carousel/image.html
+++ b/responsive_image_carousel/image.html
@@ -1,11 +1,11 @@
 <main>
     <title>Wonders of World</title>
     <link href="https://unpkg.com/ionicons@7.1.0/dist/css/ionicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="image.css">
+    <link rel="stylesheet" type="text/css" href="css/image.css">
     <!-- ul in html stands  for unordered list-->
 <ul class='slider'>
     <!-- create a list of image with image title and  and image description-->
-    <li class = 'item' style="background-image: url('great_wall.jpeg');">
+    <li class = 'item' style="background-image: url('images/great_wall.jpeg');">
         <div class='content'>
             <h2 class = 'title'> "Great Wall Of China" </h2>
             <p class = 'description'>
@@ -18,7 +18,7 @@
             <button> Read More</button>
 </div>
     </li>
-    <li class = 'item' style="background-image: url('taj.jpg');">
+    <li class = 'item' style="background-image: url('images/taj.jpg');">
     <div class ='content'>
         <h2 class = 'title'>" Taj Mahal"</h2>
         <p class = 'description'>
@@ -34,7 +34,7 @@
     </div>
     
     </li>
-    <li class = 'item' style="background-image: url('christ_redemeer.jpg');">
+    <li class = 'item' style="background-image: url('images/christ_redemeer.jpg');">
         <div class='content'>
             <h2 class = 'title'> "Christ The Redemeer" </h2>
             <p class = 'description'>
@@ -50,7 +50,7 @@
             <button> Read More</button>
 </div>
     </li>
-    <li class = 'item' style="background-image: url('machu_picchu.webp');">
+    <li class = 'item' style="background-image: url('images/machu_picchu.webp');">
     <div class ='content'>
         <h2 class = 'title'>"Machu Picchu"</h2>
         <p class = 'description'>
@@ -65,7 +65,7 @@
     </div>
     
     </li>
-    <li class = 'item' style="background-image: url('colosseum.jpg');">
+    <li class = 'item' style="background-image: url('images/colosseum.jpg');">
         <div class='content'>
             <h2 class = 'title'> "Colosseum" </h2>
             <p class = 'description'>
@@ -82,7 +82,7 @@
             <button> Read More</button>
 </div>
     </li>
-    <li class = 'item' style="background-image: url('petra.jpg');">
+    <li class = 'item' style="background-image: url('images/petra.jpg');">
     <div class ='content'>
         <h2 class = 'title'>" Petra "</h2>
         <p class = 'description'>
@@ -109,7 +109,7 @@
 
 </nav>
 </main>
-<script type="text/javascript" src="image.js"></script>
+<script type="text/javascript" src="js/image.js"></script>
 <script type = "module"
 src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js">
 </script>
